RESOLVED FIXED251651
StorageAreaMap should sync items again when removeItem fails in backend
https://bugs.webkit.org/show_bug.cgi?id=251651
Summary StorageAreaMap should sync items again when removeItem fails in backend
Sihui Liu
Reported 2023-02-02 16:54:31 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-02 16:55:36 PST
Sihui Liu
Comment 2 2023-02-02 17:22:10 PST
EWS
Comment 3 2023-05-03 11:05:11 PDT
Committed 263637@main (3f02953de140): <https://commits.webkit.org/263637@main> Reviewed commits have been landed. Closing PR #9572 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.